Fix bug z-index glitch and header

--- a/src/assets/scss/base/_settings.scss
+++ b/src/assets/scss/base/_settings.scss
@@ -16,6 +16,7 @@ body, *{
 :root{
     --navy:#0A192F;
     --light-navy: #112240;
+    --lightest-navy: #233554;
     --slate-light:#CCD6F6;
     --slate-gray:#8892b0;
     --purple:#444EFF;
