--- a/src/assets/scss/components/_aside.scss
+++ b/src/assets/scss/components/_aside.scss
@@ -25,7 +25,7 @@
         z-index: 10;
         transform: translateX(0vw);
         visibility: visible;
-        transition: all .1s cubic-bezier(.16,.47,1,-0.23);
+        transition: all .5s cubic-bezier(.16,.47,1,-0.23);
         // transition: all .1s ease-in-out;
        
         
@@ -124,7 +124,7 @@
     
 }
 body.aside__blur #content > *{
-    // filter: blur(5px) brightness(0.7);
+    filter: blur(5px) brightness(0.7);
     pointer-events: none;
     user-select: none;
     z-index: -1;
