--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -1,5 +1,6 @@
 
 header{
+    z-index: 100;
     width: 100%;;
     height: var(--nav-height);
     position: fixed;
